// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entering token contract address should generate the expected HTML 1`] = `
<DocumentFragment>
  <div
    class="newTokenView cardShow"
  >
    <div
      class="newTokenChainSelectTitle"
    >
      What chain is this token on?
    </div>
    <div
      class="newTokenChainSelectChain"
    >
      <div
        class="originSwapChainList"
      >
        <div
          class="originChainItem"
          role="button"
        >
          <div
            class="originChainItemIcon"
          >
            <div
              class="ringIcon"
            >
              <div
                class="ringIconInner"
              >
                <div
                  style="width: 18px; height: 18px;"
                >
                  <svg
                    height="18px"
                    viewBox="0 0 84 84"
                    width="18px"
                  >
                    <path
                      d="M69.7,37.4L43.2,1.6c-0.4-0.8-1.3-1.1-2.1-0.7c-0.3,0.1-0.5,0.4-0.7,0.7L13.8,37.4c-0.5,0.7-0.2,1.7,0.5,2.1c0,0,0,0,0.1,0L41,53.1c0.5,0.3,1.2,0.3,1.7,0l26.6-13.6C70,39.1,70.2,38.2,69.7,37.4C69.8,37.4,69.8,37.4,69.7,37.4z M67.6,50.2L42.8,64.4c-0.6,0.4-1.4,0.4-1.9,0L16,50.2c-0.3-0.2-0.7-0.2-0.9,0.1c-0.2,0.3-0.2,0.7,0.1,0.9l0,0l25.1,31.1c0.6,0.9,1.7,1.1,2.6,0.6c0.2-0.1,0.4-0.3,0.6-0.6l25-31.1c0.3-0.2,0.3-0.6,0.1-0.9C68.3,50,67.8,50,67.6,50.2L67.6,50.2z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          Mainnet
          <div
            class="originChainItemCheck"
          />
        </div>
        <div
          class="originChainItem"
          role="button"
          style="background: rgb(140, 97, 232);"
        >
          <div
            class="originChainItemIcon"
          >
            <div
              class="ringIcon"
              style="border-color: rgb(140, 97, 232);"
            >
              <div
                class="ringIconInner"
                style="background: rgb(140, 97, 232);"
              >
                <img
                  src="[object Object]"
                />
              </div>
            </div>
          </div>
          Polygon
          <div
            class="originChainItemCheck"
            style="background: rgb(140, 97, 232);"
          >
            <div
              style="width: 28px; height: 28px;"
            >
              <svg
                height="28px"
                viewBox="0 0 448 512"
                width="28px"
              >
                <path
                  d="M438.6 105.4C451.1 117.9 451.1 138.1 438.6 150.6L182.6 406.6C170.1 419.1 149.9 419.1 137.4 406.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4C21.87 220.9 42.13 220.9 54.63 233.4L159.1 338.7L393.4 105.4C405.9 92.88 426.1 92.88 438.6 105.4H438.6z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="newTokenChainSelectFooter"
    >
      Chain not listed? Enable it in Chains
    </div>
  </div>
</DocumentFragment>
`;

exports[`retrieving token metadata - successful lookup should generate the expected HTML 1`] = `
<DocumentFragment>
  <div
    class="notifyBoxWrap cardShow"
  >
    <div
      class="notifyBoxSlide"
    >
      <div
        class="addTokenTop"
      >
        <div
          class="addTokenTitle"
        >
          Add New Token
        </div>
        <div
          class="newTokenChainSelectTitle"
        >
          <div
            class="newTokenChainAddress"
          >
            0x3432b6a6
            <svg
              aria-hidden="true"
              class="octicon"
              height="14"
              role="img"
              style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 13 16"
              width="11.375"
            >
              <path
                d="M1.5 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm5 0a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM13 7.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
                fill-rule="evenodd"
              />
            </svg>
            d9c964d0
          </div>
          <div
            class="newTokenChainSelectSubtitle"
            style="color: rgb(140, 97, 232);"
          >
            on Polygon
          </div>
        </div>
      </div>
      <div
        class="addToken"
        style=""
      >
        <div
          class="tokenRow"
        >
          <div
            class="tokenName"
          >
            <label
              class="tokenInputLabel"
            >
              <input
                class="tokenInput "
                spellcheck="false"
                value="Frame Test on Polygon"
              />
              Token Name
            </label>
          </div>
        </div>
        <div
          class="tokenRow"
        >
          <div
            class="tokenSymbol"
          >
            <label
              class="tokenInputLabel"
            >
              <input
                class="tokenInput "
                spellcheck="false"
                value="mFRT"
              />
              Symbol
            </label>
          </div>
          <div
            class="tokenDecimals"
          >
            <label
              class="tokenInputLabel"
            >
              <input
                class="tokenInput "
                spellcheck="false"
                value="18"
              />
              Decimals
            </label>
          </div>
        </div>
        <div
          class="tokenRow"
        >
          <div
            class="tokenLogoUri"
          >
            <label
              class="tokenInputLabel"
            >
              <input
                class="tokenInput tokenInputDim"
                spellcheck="false"
                value="Logo URI"
              />
              Logo URI
            </label>
          </div>
        </div>
        <div
          class="tokenRow"
        >
          <div
            class="addTokenSubmit"
          >
            Fill in Token Details
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`retrieving token metadata - unsuccessful lookup should generate the expected HTML 1`] = `
<DocumentFragment>
  <div
    class="notifyBoxWrap cardShow"
  >
    <div
      class="notifyBoxSlide"
    >
      <div
        class="addTokenTop"
      >
        <div
          class="addTokenTitle"
        >
          Add New Token
        </div>
        <div
          class="newTokenChainSelectTitle"
        >
          <div
            class="newTokenChainAddress"
          >
            0x3432b6a6
            <svg
              aria-hidden="true"
              class="octicon"
              height="14"
              role="img"
              style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 13 16"
              width="11.375"
            >
              <path
                d="M1.5 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zm5 0a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM13 7.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
                fill-rule="evenodd"
              />
            </svg>
            dinvalid
          </div>
          <div
            class="newTokenChainSelectSubtitle"
            style="color: rgb(140, 97, 232);"
          >
            on Polygon
          </div>
        </div>
      </div>
      <div
        class="addToken"
        style=""
      >
        <div
          class="tokenRow"
        >
          <div
            class="tokenName"
          >
            <label
              class="tokenInputLabel"
            >
              <input
                class="tokenInput tokenInputDim"
                spellcheck="false"
                value="Token Name"
              />
              Token Name
            </label>
          </div>
        </div>
        <div
          class="tokenRow"
        >
          <div
            class="tokenSymbol"
          >
            <label
              class="tokenInputLabel"
            >
              <input
                class="tokenInput tokenInputDim"
                spellcheck="false"
                value="SYMBOL"
              />
              Symbol
            </label>
          </div>
          <div
            class="tokenDecimals"
          >
            <label
              class="tokenInputLabel"
            >
              <input
                class="tokenInput tokenInputDim"
                spellcheck="false"
                value="?"
              />
              Decimals
            </label>
          </div>
        </div>
        <div
          class="tokenRow"
        >
          <div
            class="tokenLogoUri"
          >
            <label
              class="tokenInputLabel"
            >
              <input
                class="tokenInput tokenInputDim"
                spellcheck="false"
                value="Logo URI"
              />
              Logo URI
            </label>
          </div>
        </div>
        <div
          class="tokenRow"
        >
          <div
            class="addTokenSubmit"
          >
            Fill in Token Details
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selecting token chain should generate the expected HTML 1`] = `
<DocumentFragment>
  <div
    class="newTokenView cardShow"
  >
    <div
      class="newTokenChainSelectTitle"
    >
      What chain is this token on?
    </div>
    <div
      class="newTokenChainSelectChain"
    >
      <div
        class="originSwapChainList"
      >
        <div
          class="originChainItem"
          role="button"
        >
          <div
            class="originChainItemIcon"
          >
            <div
              class="ringIcon"
            >
              <div
                class="ringIconInner"
              >
                <div
                  style="width: 18px; height: 18px;"
                >
                  <svg
                    height="18px"
                    viewBox="0 0 84 84"
                    width="18px"
                  >
                    <path
                      d="M69.7,37.4L43.2,1.6c-0.4-0.8-1.3-1.1-2.1-0.7c-0.3,0.1-0.5,0.4-0.7,0.7L13.8,37.4c-0.5,0.7-0.2,1.7,0.5,2.1c0,0,0,0,0.1,0L41,53.1c0.5,0.3,1.2,0.3,1.7,0l26.6-13.6C70,39.1,70.2,38.2,69.7,37.4C69.8,37.4,69.8,37.4,69.7,37.4z M67.6,50.2L42.8,64.4c-0.6,0.4-1.4,0.4-1.9,0L16,50.2c-0.3-0.2-0.7-0.2-0.9,0.1c-0.2,0.3-0.2,0.7,0.1,0.9l0,0l25.1,31.1c0.6,0.9,1.7,1.1,2.6,0.6c0.2-0.1,0.4-0.3,0.6-0.6l25-31.1c0.3-0.2,0.3-0.6,0.1-0.9C68.3,50,67.8,50,67.6,50.2L67.6,50.2z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          Mainnet
          <div
            class="originChainItemCheck"
          />
        </div>
        <div
          class="originChainItem"
          role="button"
        >
          <div
            class="originChainItemIcon"
          >
            <div
              class="ringIcon"
              style="border-color: rgb(140, 97, 232);"
            >
              <div
                class="ringIconInner"
                style="background: rgb(140, 97, 232);"
              >
                <img
                  src="[object Object]"
                />
              </div>
            </div>
          </div>
          Polygon
          <div
            class="originChainItemCheck"
          />
        </div>
      </div>
    </div>
    <div
      class="newTokenChainSelectFooter"
    >
      Chain not listed? Enable it in Chains
    </div>
  </div>
</DocumentFragment>
`;
